# xhs-assistant

./: .claude.md  dev.sh  main.py  plan.md  pyproject.toml
src/: server.py
src/agents/: __init__.py  nodes.py  prompts.py  state.py  workflow.py
src/agents/prompts/: __init__.py  analyze.py  critic.py  formatting.py  generator.py  preanalyse.py
src/agents/validators/: __init__.py  xhs_post_validators.py
src/agents/workflows/: __init__.py  basic.py
src/tools/: __init__.py  extract.py  generator.py  web.py
src/utils/: __init__.py  llm.py  logger.py  logging_config.py
topic/: EP01  EP02  EP03
